@@ -2,18 +2,18 @@ package com.kronusboss.cine.movie.usecase.impl;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Component;
 
-import com.kronusboss.cine.movie.adapter.repository.jpa.MovieRepository;
+import com.kronusboss.cine.movie.adapter.repository.MovieRepository;
 import com.kronusboss.cine.movie.domain.Movie;
 import com.kronusboss.cine.movie.domain.MovieNote;
 import com.kronusboss.cine.movie.usecase.SearchMovieUseCase;
@@ -24,37 +24,6 @@ public class SearchMovieUseCaseImpl implements SearchMovieUseCase {
 
 	@Autowired
 	private MovieRepository repository;
-
-	@Override
-	public Page<Movie> listMoviesAll(Pageable pageable, UUID userId) {
-		Page<Movie> movies = repository.findAll(pageable);
-
-		return omitNoteIfNeeded(movies, userId);
-	}
-
-	@Override
-	public Page<Movie> listAllMoviesOrderByNotesAvg(String sortJoin, Pageable pageable, UUID userId) {
-		Pageable objPageableWithoutSort = PageRequest.of(pageable.getPageNumber(), pageable.getPageSize());
-
-		if (sortJoin.contains("notes,asc")) {
-			return omitNoteIfNeeded(repository.findMovieOrderByNoteAvgASC(objPageableWithoutSort), userId);
-		}
-
-		return omitNoteIfNeeded(repository.findMovieOrderByNoteAvgDESC(objPageableWithoutSort), userId);
-	}
-
-	@Override
-	public Page<Movie> listMoviesByTitle(String title, Pageable pageable, UUID userId) {
-		String[] titleSplitBySpace = title.split(" ");
-
-		String[] params = new String[titleSplitBySpace.length];
-		for (int i = 0; i < params.length; i++) {
-			params[i] = "%" + titleSplitBySpace[i] + "%";
-		}
-		Page<Movie> movies = repository.findMovieByTitleIlikeAll(params, pageable);
-
-		return omitNoteIfNeeded(movies, userId);
-	}
 
 	@Override
 	public Movie getById(UUID id, UUID userId) throws MovieNoteNotFoundException {
@@ -70,7 +39,25 @@ public class SearchMovieUseCaseImpl implements SearchMovieUseCase {
 			repository.saveAndFlush(movie);
 		}
 
-		return omitNoteIfNeeded(movie, userId);
+		Movie result = omitNoteIfNeeded(movie, userId);
+		result.getNotes().sort(MovieNote.comparator());
+
+		return result;
+	}
+
+	@Override
+	public Page<Movie> listAllMovies(String title, String genre, String sortJoin, Pageable pageable, UUID userId) {
+		List<String> titles = null;
+		if (StringUtils.isNotBlank(title)) {
+			titles = Arrays.asList(title.split(" "));
+		}
+		List<Long> genres = null;
+		if (StringUtils.isNotBlank(genre)) {
+			genres = Arrays.asList(genre.split(",")).stream().map(Long::parseLong).toList();
+		}
+		Page<Movie> movies = repository.findMovieFilteredCustom(titles, genres, sortJoin, pageable);
+
+		return omitNoteIfNeeded(movies, userId);
 	}
 
 	private Page<Movie> omitNoteIfNeeded(Page<Movie> movies, UUID userId) {
@@ -82,7 +69,7 @@ public class SearchMovieUseCaseImpl implements SearchMovieUseCase {
 					}
 
 					return n;
-				}).collect(Collectors.toList());
+				}).toList();
 				m.setNotes(notes);
 			}
 
@@ -98,7 +85,7 @@ public class SearchMovieUseCaseImpl implements SearchMovieUseCase {
 				}
 
 				return n;
-			}).collect(Collectors.toList());
+			}).toList();
 			movie.setNotes(notes);
 		}
 
